# nvs

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  index.html  params.json
docs/: uml_obj.dia
include/: Makefile.am
include/NVSCpp/: Apr.cpp  Apr.h  Pool.cpp
include/Subversion/: AnnotateLine.h  Apr.h  Client.cpp  Client.h  ClientAnnotate.cpp  ClientCat.cpp  ClientDiff.cpp  ClientList.cpp  ClientModify.cpp  ClientProperty.cpp  ClientStatus.cpp  Context.cpp  Context.h  ContextData.cpp  ContextData.h  ContextListener.h  Datetime.cpp  Datetime.h  Dirent.cpp  Dirent.h  Entry.cpp  Entry.h  Exception.cpp  Exception.h  Info.cpp  Info.h  LogEntry.cpp  LogEntry.h  Path.cpp  Path.h  Pool.cpp  Pool.h  Property.cpp  Property.h  Revision.cpp  Revision.h  Status.cpp  Status.h  StatusSelection.cpp  StatusSelection.h  (+7 more)
include/Support/: ManagedStatic.cpp  ManagedStatic.h  Uncopyable.h
include/Widget/: Application.cpp  Application.h  Color.cpp  Color.h  Cursor.cpp  Cursor.h  Event.cpp  Event.h  Label.cpp  Label.h  Layout.cpp  Layout.h  ListWidget.cpp  ListWidget.h  MainWindow.cpp  MainWindow.h  Object.cpp  Object.h  Palette.cpp  Palette.h  Panel.cpp  Panel.h  Point.cpp  Point.h  Rect.cpp  Rect.h  StatusBar.h  Widget.cpp  Widget.h  WinCursor.cpp  WinCursor.h  Window.cpp  Window.h
libNVSCpp/: Makefile.am
libNVSWidget/: Makefile.am
m4/: apr.m4  apu.m4  svn.m4
src/: Makefile.am  Model.h  NVSApplication.cpp  NVSApplication.h  NVSView.cpp  NVSView.h  SVNClient.cpp  SVNClient.h  Screen.cpp  Screen.h  main.cpp
