nobase_include_HEADERS = Widget/Point.h \
	Widget/Application.h \
	Widget/Color.h \
	Widget/Cursor.h \
	Widget/Layout.h \
	Widget/Widget.h \
	Widget/Event.h \
	Widget/Rect.h \
	Widget/Label.h \
	Widget/MainWindow.h \
	Widget/Palette.h \
	Widget/Panel.h \
	Widget/Window.h \
	Support/ManagedStatic.h \
	Support/Uncopyable.h \
	NVSCpp/Apr.h \
	NVSCpp/Pool.h
