nobase_include_HEADERS = Widget/Point.h \
	Widget/Application.h \
	Widget/Color.h \
	Widget/Cursor.h \
	Widget/Layout.h \
	Widget/Widget.h \
	Widget/Event.h \
	Widget/Rect.h \
	Widget/Label.h \
	Widget/MainWindow.h \
	Widget/Palette.h \
	Widget/Panel.h \
	Widget/Window.h \
	Support/ManagedStatic.h \
	Support/Uncopyable.h \
	Subversion/AnnotateLine.h \
	Subversion/Apr.h \
	Subversion/Context.h \
	Subversion/ContextData.h \
	Subversion/ContextListener.h \
	Subversion/Client.h \
	Subversion/Datetime.h \
	Subversion/Dirent.h \
	Subversion/Entry.h \
	Subversion/Exception.h \
	Subversion/Info.h \
	Subversion/LogEntry.h \
	Subversion/Path.h \
	Subversion/Pool.h \
	Subversion/Property.h \
	Subversion/Revision.h \
	Subversion/Status.h \
	Subversion/StatusSelection.h \
	Subversion/Targets.h \
	Subversion/Url.h \
	Subversion/Wc.h
