AM_CPPFLAGS = -I../include -std=c++11

lib_LTLIBRARIES = libNVSWidget.la

libNVSWidget_la_SOURCES = ../include/Widget/Point.cpp \
	../include/Widget/Application.cpp \
	../include/Widget/Object.cpp \
	../include/Widget/Layout.cpp \
	../include/Widget/Widget.cpp \
	../include/Widget/Event.cpp \
	../include/Widget/Rect.cpp \
	../include/Support/ManagedStatic.cpp

libNVSWidget_la_LIBADD = -lcurses
